fixed wrapping cards issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,7 +194,7 @@ button:hover{
 .tricks{
     grid-row: 2 / 4;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
 }
 
@@ -202,8 +202,6 @@ button:hover{
     display: grid;
     grid-template-rows: 10px 1fr 10px;
     gap: 1em;
-    width: 300px;
-    height: 150px;
     padding: 1.5rem;
     background-color: #f1f5f9;
     border-radius: 5px;
